Add NightingaleFilter with lit/react; adjust filter logic for new nightingale approach.

--- a/package.json
+++ b/package.json
@@ -103,11 +103,12 @@
     "@floating-ui/dom": "1.6.5",
     "@hello-pangea/dnd": "16.5.0",
     "@lit/react": "1.0.4",
+    "@nightingale-elements/nightingale-filter": "^5.2.0",
     "@nightingale-elements/nightingale-manager": "file:.yalc/@nightingale-elements/nightingale-manager",
-    "@nightingale-elements/nightingale-msa": "5.1.0",
-    "@nightingale-elements/nightingale-navigation": "5.1.0",
+    "@nightingale-elements/nightingale-msa": "5.2.0",
+    "@nightingale-elements/nightingale-navigation": "5.2.0",
     "@nightingale-elements/nightingale-new-core": "file:.yalc/@nightingale-elements/nightingale-new-core",
-    "@nightingale-elements/nightingale-sequence": "5.1.0",
+    "@nightingale-elements/nightingale-sequence": "5.2.0",
     "@nightingale-elements/nightingale-track": "file:.yalc/@nightingale-elements/nightingale-track",
     "@nightingale-elements/nightingale-variation": "file:.yalc/@nightingale-elements/nightingale-variation",
     "@sentry/react": "7.27.0",
@@ -130,7 +131,7 @@
     "lodash-es": "4.17.21",
     "marked": "4.2.1",
     "p-map": "5.5.0",
-    "protvista-uniprot": "2.13.0",
+    "protvista-uniprot": "file:.yalc/protvista-uniprot",
     "react": "18.2.0",
     "react-diff-viewer-continued": "3.4.0",
     "react-dom": "18.2.0",
