Add protvista-uniprot to transformIgnorePatterns.

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
       "jsx"
     ],
     "transformIgnorePatterns": [
-      "<rootDir>/node_modules/(?!franklin-sites|p-map|aggregate-error|clean-stack|@nightingale|@lit/react|url-join).+\\.js"
+      "<rootDir>/node_modules/(?!franklin-sites|p-map|aggregate-error|clean-stack|protvista-uniprot|@nightingale|@lit/react|url-join).+\\.js"
     ],
     "testPathIgnorePatterns": [
       "/__mocks__/",
