Remove yalc references.

--- a/package.json
+++ b/package.json
@@ -101,14 +101,14 @@
     "@floating-ui/dom": "1.6.5",
     "@hello-pangea/dnd": "17.0.0",
     "@lit/react": "1.0.5",
-    "@nightingale-elements/nightingale-filter": "^5.2.0",
-    "@nightingale-elements/nightingale-manager": "file:.yalc/@nightingale-elements/nightingale-manager",
+    "@nightingale-elements/nightingale-filter": "5.2.0",
+    "@nightingale-elements/nightingale-manager": "5.2.0",
     "@nightingale-elements/nightingale-msa": "5.2.0",
     "@nightingale-elements/nightingale-navigation": "5.2.0",
-    "@nightingale-elements/nightingale-new-core": "file:.yalc/@nightingale-elements/nightingale-new-core",
+    "@nightingale-elements/nightingale-new-core": "5.2.0",
     "@nightingale-elements/nightingale-sequence": "5.2.0",
-    "@nightingale-elements/nightingale-track": "file:.yalc/@nightingale-elements/nightingale-track",
-    "@nightingale-elements/nightingale-variation": "file:.yalc/@nightingale-elements/nightingale-variation",
+    "@nightingale-elements/nightingale-track": "5.2.0",
+    "@nightingale-elements/nightingale-variation": "5.2.0",
     "@sentry/react": "8.31.0",
     "@sentry/tracing": "7.27.0",
     "@sentry/types": "8.31.0",
