Upgrade to v5.3.0 of nightingale.

--- a/package.json
+++ b/package.json
@@ -101,25 +101,14 @@
     "@floating-ui/dom": "1.6.5",
     "@hello-pangea/dnd": "17.0.0",
     "@lit/react": "1.0.5",
-    "@nightingale-elements/nightingale-colored-sequence": "file:.yalc/@nightingale-elements/nightingale-colored-sequence",
-    "@nightingale-elements/nightingale-filter": "file:.yalc/@nightingale-elements/nightingale-filter",
-    "@nightingale-elements/nightingale-heatmap": "file:.yalc/@nightingale-elements/nightingale-heatmap",
-    "@nightingale-elements/nightingale-interpro-track": "file:.yalc/@nightingale-elements/nightingale-interpro-track",
-    "@nightingale-elements/nightingale-linegraph-track": "file:.yalc/@nightingale-elements/nightingale-linegraph-track",
-    "@nightingale-elements/nightingale-links": "file:.yalc/@nightingale-elements/nightingale-links",
-    "@nightingale-elements/nightingale-manager": "file:.yalc/@nightingale-elements/nightingale-manager",
-    "@nightingale-elements/nightingale-msa": "file:.yalc/@nightingale-elements/nightingale-msa",
-    "@nightingale-elements/nightingale-navigation": "file:.yalc/@nightingale-elements/nightingale-navigation",
-    "@nightingale-elements/nightingale-new-core": "file:.yalc/@nightingale-elements/nightingale-new-core",
-    "@nightingale-elements/nightingale-overlay": "file:.yalc/@nightingale-elements/nightingale-overlay",
-    "@nightingale-elements/nightingale-saver": "file:.yalc/@nightingale-elements/nightingale-saver",
-    "@nightingale-elements/nightingale-sequence": "file:.yalc/@nightingale-elements/nightingale-sequence",
-    "@nightingale-elements/nightingale-sequence-heatmap": "file:.yalc/@nightingale-elements/nightingale-sequence-heatmap",
-    "@nightingale-elements/nightingale-structure": "file:.yalc/@nightingale-elements/nightingale-structure",
-    "@nightingale-elements/nightingale-sunburst": "file:.yalc/@nightingale-elements/nightingale-sunburst",
-    "@nightingale-elements/nightingale-textarea-sequence": "file:.yalc/@nightingale-elements/nightingale-textarea-sequence",
-    "@nightingale-elements/nightingale-track": "file:.yalc/@nightingale-elements/nightingale-track",
-    "@nightingale-elements/nightingale-variation": "file:.yalc/@nightingale-elements/nightingale-variation",
+    "@nightingale-elements/nightingale-filter": "5.3.0",
+    "@nightingale-elements/nightingale-manager": "5.3.0",
+    "@nightingale-elements/nightingale-msa": "5.3.0",
+    "@nightingale-elements/nightingale-navigation": "5.3.0",
+    "@nightingale-elements/nightingale-new-core": "5.3.0",
+    "@nightingale-elements/nightingale-sequence": "5.3.0",
+    "@nightingale-elements/nightingale-track": "5.3.0",
+    "@nightingale-elements/nightingale-variation": "5.3.0",
     "@sentry/react": "8.31.0",
     "@sentry/tracing": "7.27.0",
     "@sentry/types": "8.31.0",
