--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "string-width": "4.1.0"
   },
   "dependencies": {
-    "@geneontology/wc-gocam-viz": "1.0.1-beta.2",
+    "@geneontology/wc-gocam-viz": "1.0.1",
     "@hello-pangea/dnd": "17.0.0",
     "@lit/react": "1.0.5",
     "@nightingale-elements/nightingale-msa": "5.0.0",
