Update react to latest 18 and adjust tsconfig to resolve type issues.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,10 @@
       {
         "name": "typescript-plugin-css-modules"
       }
-    ]
+    ],
+    "paths": {
+      "react": ["./node_modules/@types/react"]
+    }
   },
   "include": ["src"],
   "exclude": ["node_modules"]
