--- a/package.json
+++ b/package.json
@@ -191,6 +191,7 @@
     "css-loader": "7.1.2",
     "eslint": "9.17.0",
     "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-typescript": "3.7.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.4",
