--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/modifiers": "9.0.0",
     "@dnd-kit/sortable": "10.0.0",
     "@dnd-kit/utilities": "3.2.2",
     "@floating-ui/dom": "1.6.5",
@@ -125,7 +126,7 @@
     "core-js": "3.38.1",
     "d3": "5.16.0",
     "deep-freeze": "0.0.1",
-    "franklin-sites": "0.0.251",
+    "franklin-sites": "file:.yalc/franklin-sites",
     "front-matter": "4.0.2",
     "history": "4.10.1",
     "idb": "8.0.0",
