--- a/package.json
+++ b/package.json
@@ -100,8 +100,8 @@
     "string-width": "4.1.0"
   },
   "dependencies": {
-    "@geneontology/wc-gocam-viz": "1.0.1",
     "@floating-ui/dom": "1.6.5",
+    "@geneontology/wc-gocam-viz": "1.1.1-beta.3",
     "@hello-pangea/dnd": "17.0.0",
     "@lit/react": "1.0.5",
     "@nightingale-elements/nightingale-filter": "5.3.2",
