Upgrade @geneontology/wc-gocam-viz to 1.1.1

--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "@dnd-kit/sortable": "10.0.0",
     "@dnd-kit/utilities": "3.2.2",
     "@floating-ui/dom": "1.6.5",
-    "@geneontology/wc-gocam-viz": "1.1.1-beta.3",
+    "@geneontology/wc-gocam-viz": "1.1.1",
     "@lit/react": "1.0.5",
     "@nightingale-elements/nightingale-filter": "5.3.2",
     "@nightingale-elements/nightingale-manager": "5.3.2",
