--- a/package.json
+++ b/package.json
@@ -106,14 +106,27 @@
     "@dnd-kit/utilities": "3.2.2",
     "@floating-ui/dom": "1.6.5",
     "@lit/react": "1.0.5",
-    "@nightingale-elements/nightingale-filter": "5.3.2",
-    "@nightingale-elements/nightingale-manager": "5.3.2",
-    "@nightingale-elements/nightingale-msa": "5.3.2",
-    "@nightingale-elements/nightingale-navigation": "5.3.2",
-    "@nightingale-elements/nightingale-new-core": "5.3.2",
-    "@nightingale-elements/nightingale-sequence": "5.3.2",
-    "@nightingale-elements/nightingale-track": "5.3.2",
-    "@nightingale-elements/nightingale-variation": "5.3.2",
+    "@nightingale-elements/nightingale-colored-sequence": "file:.yalc/@nightingale-elements/nightingale-colored-sequence",
+    "@nightingale-elements/nightingale-filter": "file:.yalc/@nightingale-elements/nightingale-filter",
+    "@nightingale-elements/nightingale-heatmap": "file:.yalc/@nightingale-elements/nightingale-heatmap",
+    "@nightingale-elements/nightingale-interpro-track": "file:.yalc/@nightingale-elements/nightingale-interpro-track",
+    "@nightingale-elements/nightingale-linegraph-track": "file:.yalc/@nightingale-elements/nightingale-linegraph-track",
+    "@nightingale-elements/nightingale-links": "file:.yalc/@nightingale-elements/nightingale-links",
+    "@nightingale-elements/nightingale-manager": "file:.yalc/@nightingale-elements/nightingale-manager",
+    "@nightingale-elements/nightingale-msa": "file:.yalc/@nightingale-elements/nightingale-msa",
+    "@nightingale-elements/nightingale-navigation": "file:.yalc/@nightingale-elements/nightingale-navigation",
+    "@nightingale-elements/nightingale-new-core": "file:.yalc/@nightingale-elements/nightingale-new-core",
+    "@nightingale-elements/nightingale-overlay": "file:.yalc/@nightingale-elements/nightingale-overlay",
+    "@nightingale-elements/nightingale-saver": "file:.yalc/@nightingale-elements/nightingale-saver",
+    "@nightingale-elements/nightingale-scrollbox": "file:.yalc/@nightingale-elements/nightingale-scrollbox",
+    "@nightingale-elements/nightingale-sequence": "file:.yalc/@nightingale-elements/nightingale-sequence",
+    "@nightingale-elements/nightingale-sequence-heatmap": "file:.yalc/@nightingale-elements/nightingale-sequence-heatmap",
+    "@nightingale-elements/nightingale-structure": "file:.yalc/@nightingale-elements/nightingale-structure",
+    "@nightingale-elements/nightingale-sunburst": "file:.yalc/@nightingale-elements/nightingale-sunburst",
+    "@nightingale-elements/nightingale-textarea-sequence": "file:.yalc/@nightingale-elements/nightingale-textarea-sequence",
+    "@nightingale-elements/nightingale-track": "file:.yalc/@nightingale-elements/nightingale-track",
+    "@nightingale-elements/nightingale-track-canvas": "file:.yalc/@nightingale-elements/nightingale-track-canvas",
+    "@nightingale-elements/nightingale-variation": "file:.yalc/@nightingale-elements/nightingale-variation",
     "@sentry/react": "8.31.0",
     "@sentry/tracing": "7.27.0",
     "@sentry/types": "8.31.0",
