--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-hooks": "5.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "fake-indexeddb": "6.0.0",
     "globals": "15.14.0",
     "html-loader": "5.1.0",
