--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
       "<rootDir>/\\..+\\/"
     ],
     "moduleNameMapper": {
+      "\\.svg\\?raw$": "<rootDir>/__mocks__/rawSvgMock.js",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less|sass|scss)$": "identity-obj-proxy",
       "^/(.*)$": "<rootDir>/src/$1",
@@ -128,7 +129,7 @@
     "core-js": "3.38.1",
     "d3": "5.16.0",
     "deep-freeze": "0.0.1",
-    "franklin-sites": "0.0.256",
+    "franklin-sites": "file:.yalc/franklin-sites",
     "front-matter": "4.0.2",
     "history": "4.10.1",
     "idb": "8.0.0",
