--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,7 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.local
 .vscode
 __diff_output__
 
