--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "core-js": "3.38.1",
     "d3": "5.16.0",
     "deep-freeze": "0.0.1",
-    "franklin-sites": "0.0.258",
+    "franklin-sites": "file:.yalc/franklin-sites",
     "front-matter": "4.0.2",
     "idb": "8.0.0",
     "interaction-viewer": "3.8.4",
