--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "@nightingale-elements/nightingale-navigation": "5.6.0",
     "@nightingale-elements/nightingale-new-core": "5.6.0",
     "@nightingale-elements/nightingale-sequence": "5.6.0",
+    "@nightingale-elements/nightingale-structure": "5.8.0",
     "@nightingale-elements/nightingale-track": "5.6.0",
     "@nightingale-elements/nightingale-track-canvas": "5.6.0",
     "@nightingale-elements/nightingale-variation": "5.6.0",
@@ -140,7 +141,7 @@
     "marked": "14.1.2",
     "marked-gfm-heading-id": "4.1.0",
     "p-map": "7.0.2",
-    "protvista-uniprot": "4.4.8",
+    "protvista-uniprot": "4.5.0",
     "react": "18",
     "react-diff-viewer-continued": "3.4.0",
     "react-dom": "18",
