--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:prod": "rimraf build && webpack --env API_PREFIX=https://rest.uniprot.org --env GIT_BRANCH=$CI_COMMIT_BRANCH --mode production",
     "build:lmic": "rimraf build && webpack --env API_PREFIX=https://rest.uniprot.org --env PUBLIC_PATH=/uniprot/front-end/lmic/ --env GIT_BRANCH=$CI_COMMIT_BRANCH --env LMIC=true --mode development",
     "build:ux": "rimraf build && webpack --env API_PREFIX=https://rest.uniprot.org --env PUBLIC_PATH=/uniprot/front-end/ux/ --env GIT_BRANCH=$CI_COMMIT_BRANCH --mode development",
-    "build:netlify": "rimraf build && webpack --env API_PREFIX=https://wwwdev.ebi.ac.uk/uniprot/api --env GIT_BRANCH=$CI_COMMIT_BRANCH --mode development",
+    "build:netlify": "rimraf build && webpack --env API_PREFIX=https://rest.uniprot.org --env GIT_BRANCH=$CI_COMMIT_BRANCH --mode development",
     "deploy:netlify": "yarn build:netlify && netlify deploy --dir=build --prod",
     "lint-fix": "eslint src --fix",
     "jest-coverage-ratchet": "jest-coverage-ratchet",
