--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "core-js": "3.47.0",
     "d3": "5.16.0",
     "deep-freeze": "0.0.1",
-    "franklin-sites": "file:.yalc/franklin-sites",
+    "franklin-sites": "0.0.261",
     "front-matter": "4.0.2",
     "history": "4.10.1",
     "idb": "8.0.3",
